# ch_linkbot_binding

./: .gitmodules  BUILD.md  CMakeLists.txt  README.md  createpkg_mac.sh  createpkg_win_debug.sh  createpkg_win_release.sh
c-stem/robotics/: CMakeLists.txt  position.hpp  robotAction.hpp  robot_position_recorder.cpp  robot_position_recorder.h  robot_utilities.hpp
chbarobo/include/: linkbot.h
chbarobo/lib/: chlinkboti.chf  chlinkboti_common.chf  chlinkbotl.chf  chlinkbotl_common.chf
src/: CMakeLists.txt  chlinkbot_chdl.cpp  chlinkboti_chdl.cpp  chlinkbotl_chdl.cpp  linkbot_wrapper.cpp  linkbot_wrapper.h
test/: CMakeLists.txt  motorPower.cpp  setJointMovementState.cpp  test.ch  test.cpp  testGetters.cpp  testSetters.cpp  test_get_joint_angle.ch
test/ch_binding_tests/: rename.sh  testall.sh
test/ch_binding_tests/getters/: getAccelerometerData.ch  getBatteryVoltage.ch  getDistance.ch  getJointAngle.ch  getJointAngleInstant.ch  getJointAngles.ch  getJointAnglesInstant.ch  getJointSafetyAngle.ch  getJointSafetyAngleTimeout.ch  getJointSpeed.ch  getJointSpeedRatio.ch  getJointSpeedRatios.ch  getJointSpeeds.ch  getLedColorRGB.ch
test/ch_binding_tests/group/: move.ch
test/ch_binding_tests/movement/: accelJointAngleNB.ch  accelJointTimeNB.ch  accelJointToMaxSpeedNB.ch  accelJointToVelocityNB.ch  closeGripper.ch  closeGripperNB.ch  driveAccelDistanceNB.ch  driveAccelJointTimeNB.ch  driveAccelToMaxSpeedNB.ch  driveAccelToVelocityNB.ch  driveAngle.ch  driveAngleNB.ch  driveBackward.ch  driveBackwardNB.ch  driveDistance.ch  driveDistanceNB.ch  driveForeverNB.ch  driveForward.ch  driveForwardNB.ch  driveTime.ch  driveTimeNB.ch  holdJoint.ch  holdJoints.ch  holdJointsAtExit.ch  isConnected.ch  isMoving.ch  move.ch  moveForeverNB.ch  moveJoint.ch  moveJointForeverNB.ch  moveJointNB.ch  moveJointTime.ch  moveJointTimeNB.ch  moveJointTo.ch  moveJointToByTrackPos.ch  moveJointToByTrackPosNB.ch  moveJointToNB.ch  moveJointWait.ch  moveNB.ch  moveTime.ch  (+7 more)
test/ch_binding_tests/setters/: setBuzzerFrequency.ch  setBuzzerFrequencyOnOff.ch  setJointMovementStateNB.ch  setJointMovementStateTime.ch  setJointPower.ch  setJointSafetyAngle.ch  setJointSafetyAngleTimeout.ch  setJointSpeed.ch  setJointSpeedRatio.ch  setJointSpeedRatios.ch  setJointSpeeds.ch  setLEDColor.ch  setLEDColorRGB.ch  setMotorPowers.ch  setMovementStateNB.ch  setMovementStateTime.ch  setMovementStateTimeNB.ch  setSpeed.ch
